devops/docker/caronte/proyectos/ptaller/deploy/kubernetes/namespacetaller.yml
apiVersion: v1
kind: Namespace
metadata:
  name: proyectotaller
  labels:
    name: proyectotaller
